# git_gnuradio

./: 20180925文献阅读笔记.docx  2018研究生新生奖学金名单.xls  LSTM  RNN_channel_estiamate.rar  dt_code_analyze  filesink_notes  mimo_ofdm.m  mimo_stbc.m  mimoofdmRX.grc  my_packet.grc  preamble_sync_demapper_impl.cc  rnn2  rnn3  sc_fde_chan_track1  sc_fde_lstm  sc_fde_online_svr  siso_poly.7z  test_online_svr  vmware复制相关.docx
gr-my_preamble_pilot/: CMakeLists.txt  MANIFEST.md
gr-my_preamble_pilot/cmake/Modules/: my_preamble_pilotConfig.cmake
gr-my_preamble_pilot/docs/: README.my_preamble_pilot
gr-my_preamble_pilot/docs/doxygen/: Doxyfile.in
gr-my_preamble_pilot/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-my_preamble_pilot/examples/: gmsk_rx.grc  qpsk-siso-rx.grc  siso.grc  siso_ofdm.grc  siso_ofdm2.grc  siso_rx.grc  siso_tx.grc  siso_with_cc.grc  test2grc.grc  top_block.py  tx.grc
gr-my_preamble_pilot/grc/: CMakeLists.txt  my_preamble_pilot_add_preamble_pilot.xml  my_preamble_pilot_my_preamble_detector.xml  my_preamble_pilot_remove_pilot.xml
gr-my_preamble_pilot/include/my_preamble_pilot/: CMakeLists.txt  add_preamble_pilot.h  api.h  my_preamble_detector.h  remove_pilot.h
gr-my_preamble_pilot/lib/: CMakeLists.txt  add_preamble_pilot_impl.cc  add_preamble_pilot_impl.h  my_preamble_detector_impl.cc  my_preamble_detector_impl.h  qa_my_preamble_pilot.cc  qa_my_preamble_pilot.h  remove_pilot_impl.cc  remove_pilot_impl.h  test_my_preamble_pilot.cc
gr-my_preamble_pilot/python/: CMakeLists.txt  __init__.py  qa_add_preamble_pilot.py  qa_my_preamble_detector.py  qa_remove_pilot.py
gr-my_preamble_pilot/swig/: CMakeLists.txt  my_preamble_pilot_swig.i
